# vtb_front

./: Cargo.toml  README.md
front/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
front/public/: models.js
front/src/: main.js
src/: live2d.rs  main.rs
