[package]
name = "vtb_front"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = ["front"]

[dependencies]
# log
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0.86"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"

tokio = { version = "1", features = ["full"] }

axum = { version = "0.8.1", features = ["ws", "multipart"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
